sistemazione responsive footer e eside-left

--- a/index.html
+++ b/index.html
@@ -15,9 +15,20 @@
             <!-- main section -->
             <section id="main-section" class="flex">
                 <!-- eside-left section -->
-                <section class="eside-left">
-                    <div class="logo">
-                        <img src="img/logo.svg" alt="logo">
+                <section class="eside-left flex">
+                    <section>
+                        <div class="logo">
+                            <img id="logo-1" src="img/logo.svg" alt="logo">
+                            <img id="logo-2" src="img/logo-small.svg" alt="logo">
+                        </div>
+
+                        <div >
+                            <section class="main-menu"></section>
+                            <section class="main-playlist"></section>
+                        </div>
+                    </section>
+                    <div class="main-acount flex">
+                        Diego Copat
                     </div>
                     
                 </section> <!-- /eside-left section -->
