lavoro nell'eside di sinistra

--- a/index.html
+++ b/index.html
@@ -53,23 +53,43 @@
 
                 <!-- footer-left section -->
                 <section class="footer-left">
-
+                    <div class="left-container flex">
+                        <img src="img/sinister.jpeg" alt="sinister">
+                        <div class="song-description">
+                            <h3>Sinister</h3>
+                            <div>Brano Nome</div>
+                        </div>
+                        <div class="song-icons flex">
+                            <i class="far fa-heart"></i>
+                            <i class="far fa-folder"></i>
+                        </div>
+                    </div>
                 </section> <!-- /footer-left section -->
                 
                 <!-- footer-center section -->
                 <section class="footer-center flex">
-                    <div class="center-top">
-
+                    <div class="center-top flex">
+                        <i class="fas fa-random"></i>
+                        <i class="fas fa-caret-left "></i>
+                        <i class="far fa-play-circle"></i>
+                        <i class="fas fa-caret-right"></i>
+                        <i class="fas fa-redo"></i>
                     </div>
-                    <div class="center-bottom">
-
+                    <div class="center-bottom flex">
+                        <span>0:25</span>
+                        <hr>
+                        <span>4:35</span>
                     </div>
                 </section> <!-- /footer-center section -->
 
                 <!-- footer-right section -->
                 <section class="footer-right flex">
-                    <div class="right-center">
-
+                    <div class="right-center flex">
+                        <i class="fas fa-list"></i>
+                        <i class="fas fa-desktop"></i>
+                        <i class="fas fa-volume-up"></i>
+                        <!-- <hr id="hr-footer-right"> -->
+                        <hr class="hr">
                     </div>
                 </section> <!-- /footer-right section -->
                 
