--- a/index.html
+++ b/index.html
@@ -95,10 +95,11 @@
                     <section id="song-content">
 
                         <!-- recently-played section  -->
+                        <h2>Recently played</h2>
                         <section id="recently-played">
-                            <h2>Recently played</h2>
-                            <div class="song-album flex">
-                                <div class="recently-played">
+                            
+                            <div class="song-album  flex">
+                                <div class="recently-played flex">
                                     <img src="img/metal_lifting.jpg" alt="heavy-metal">
                                 </div>
                                 <div class="recently-played">
