fine macrostruttura - mancano gli hover

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                             </section> <!-- /main-menu section -->
 
                             <!-- main-playlist section -->
-                            <section class="main-playlist">
+                            <section class="main-playlist flex">
                                 <h3 class="uppercase">Playlist</h3>
                                 <div class="icon-playlist flex">
                                     <i class="fas fa-plus-square"></i>
