--- a/index.html
+++ b/index.html
@@ -14,19 +14,21 @@
 
         <!-- main -->
         <main>
+
             <!-- main section -->
             <section id="main-section" class="flex">
+
                 <!-- eside-left section -->
                 <section class="eside-left flex">
 
                     <!-- eside-left top section -->
                     <section>
                         <div class="logo">
-                            <img id="logo-1" src="img/logo.svg" alt="logo">
-                            <img id="logo-2" src="img/logo-small.svg" alt="logo">
+                            <img id="logo" src="img/logo.svg" alt="logo">
+                            <img id="logo-small" src="img/logo-small.svg" alt="logo small">
                         </div>
 
-                        <div >
+                        <div>
                             <!-- main-menu section -->
                             <section class="main-menu flex">
                                 <div class="icon-menu flex">
@@ -219,7 +221,9 @@
                         </section>
                     </section> <!-- /popolar-artist section  -->
                 </section> <!-- /conteiner-right section -->
+
             </section> <!-- /main section -->
+
         </main> <!-- /main -->
         
         <!-- footer -->
@@ -275,6 +279,6 @@
                     </div>
                 </section> <!-- /footer-right section -->
                 
-            </footer> <!-- /footer -->
+        </footer> <!-- /footer -->
     </body>
 </html>
